<resources>
    <string name="VOID"></string>
    <string name="tittle">Activo Fijo 21</string>
    <string name="app_name">VASA</string>
    <string name="ScanBtn">Scan</string>
    <string name="PicBtn">Foto</string>
    <string name="SetTextBtn">Guardar</string>
    <string name="SetTextBackBtn">Regresar</string>
    <string name="CodeTittle">Codigo:</string>
    <string name="AudioBtn">Observaciones:</string>
    <string name="ImgTittle">Imagenes:</string>
    <string name="AudioTittle">Audio:</string>
    <string name="MAIN_FORM_TITLE">Activo VASA</string>
    <string name="MAIN_FORM_UBICACION">Ubicación</string>
    <string name="MAIN_FORM_ACTIVO">Activo</string>
    <string name="MAIN_FORM_CODIGO_VASA">Código Vasa:</string>
    <string name="MAIN_FORM_CODIGO_CLIENTE">Código Cliente:</string>
    <string name="MAIN_FORM_PROYECTO">Proyecto:</string>
    <string name="MAIN_FORM_PLANTA">Planta:</string>
    <string name="MAIN_FORM_AREA">Area:</string>
    <string name="MAIN_FORM_EDIFICIO">Edificio:</string>
    <string name="MAIN_FORM_DEPARTAMENTO">Departamento:</string>
    <string name="MAIN_FORM_NOMBRE">Nombre:</string>
    <string name="MAIN_FORM_PISO">Piso:</string>
    <string name="MAIN_FORM_CODIGO">Codigo:</string>
    <string name="MAIN_FORM_DESCRIPCION">Descripcion:</string>
    <string name="MAIN_FORM_DESCRIPCION_1">Construido con laminas de acero al carbono</string>
    <string name="MAIN_FORM_DESCRIPCION_2">Construido con laminas de acero inoxidable</string>
    <string name="MAIN_FORM_DESCRIPCION_3">Recubierto con material aislante</string>
    <string name="MAIN_FORM_MARCA">Marca:</string>
    <string name="MAIN_FORM_FABRICANTE">Fabricante:</string>
    <string name="MAIN_FORM_MODELO">Modelo:</string>
    <string name="MAIN_FORM_PAIS">Pais Origen:</string>
    <string name="MAIN_FORM_SERIAL">Serial #:</string>
    <string name="MAIN_FORM_CODIGO_PLANTA">Codigo de planta:</string>
    <string name="MAIN_FORM_TIPO">Tipo:</string>
    <string name="MAIN_FORM_CAPACIDAD">Capacidad:</string>
    <string name="MAIN_FORM_DIMENCIONES">Dimensiones:</string>
    <string name="MAIN_FORM_DIMENSIONES_PUL">pul.</string>
    <string name="MAIN_FORM_DIMENSIONES_L">L</string>
    <string name="MAIN_FORM_DIMENSIONES_H">H</string>
    <string name="MAIN_FORM_DIMENSIONES_A">A</string>
    <string name="MAIN_FORM_DIMENCIONES_M">m. </string>
    <string name="MAIN_FORM_DIAMETRO">Diametro:</string>
    <string name="MAIN_FORM_LONGITUD">Longitud(l):</string>
    <string name="MAIN_FORM_ANCHO">Ancho(a):</string>
    <string name="MAIN_FORM_ALTURA">Altura(h):</string>
    <string name="MAIN_FORM_ACCIONADO">Accionado(A) por:</string>
    <string name="MAIN_FORM_ACCIONADO_DE">De:</string>
    <string name="MAIN_FORM_MOTOR_ELECTRICO">Motor Electrico</string>
    <string name="MAIN_FORM_MOTOR_HP">HP </string>
    <string name="MAIN_FORM_MOTOR_KW">KW </string>
    <string name="MAIN_FORM_MOTOR_RPM">RPM</string>
    <string name="MAIN_FORM_MOTOR_ACOPLADO">Acoplado con un reductor de velocidad</string>
    <string name="MAIN_FORM_MOTOR_A_TRAVES">A traves de: </string>
    <string name="MAIN_FORM_COMPLETO">Completo (A) con:</string>
    <string name="MAIN_FORM_BASE">Base propia</string>
    <string name="MAIN_FORM_ESTRUCTURA_1">Estructura de soporte construida con perfiles metalicos soldados apoyada al piso</string>
    <string name="MAIN_FORM_ESTRUCTURA_2">Estructura de soporte construida con perfiles metalicos soldados apernada al piso</string>
    <string name="MAIN_FORM_ESTADO">Estado actual (%): </string>
    <string name="MAIN_FORM_ESTADO_1">Perfecta: </string>
    <string name="MAIN_FORM_ESTADO_2">Normal: </string>
    <string name="MAIN_FORM_ESTADO_3">Regular: </string>
    <string name="MAIN_FORM_ESTADO_4">Mal: </string>
    <string name="MAIN_FORM_ESTADO_5">Pesima: </string>
    <string name="MAIN_FORM_ESTADO_FUNCIONANDO">Funcionando:</string>
    <string name="MAIN_FORM_ESTADO_FUNCIONANDO_SI">Si</string>
    <string name="MAIN_FORM_ESTADO_FUNCIONANDO_NO">No</string>
    <string name="MAIN_FORM_ESTADO_FECHA_FABRICACION">Fecha de fabricacion:</string>
    <string name="MAIN_FORM_ESTADO_EDAD_APARENTE">Edad aparente:</string>
    <string name="MAIN_FORM_ESTADO_ANOS">Anos:</string>
    <string name="MAIN_FORM_OBSERVACIONES">Observaciones:</string>
    <string name="MAIN_FORM_FLUIDO">Fluido:</string>
    <string name="MAIN_FORM_ESTIMADO">Estimado:</string>
    <string name="MAIN_FORM_MOTOR">Motor:</string>
    <string name="MAIN_FORM_KM">KM:</string>
    <string name="MAIN_FORM_PLACA">Placa:</string>
    <string name="MAIN_FORM_CILINDRO">Cilindros:</string>
    <string name="MAIN_FORM_FLUIDO_ENTRADA">Entrada:</string>
    <string name="MAIN_FORM_FLUIDO_SALIDA">Salida:</string>
    <string name="MAIN_FORM_FOTO">Foto:</string>
    <string name="MAIN_FORM_GRUPO_INVENTARIO">Grupo de inventario:</string>
    <string name="MAIN_FORM_INVENTARIADO">Inventariado por:</string>
    <string name="MAIN_FORM_REVISADO">Revisado por:</string>
    <string name="MAIN_FORM_A_CALIDAD">Aseguramiento de calidad:</string>
    <string name="MAIN_FORM_TRANSCRIPCION">Transcripcion:</string>
    <string name="MAIN_FORM_FECHA">Fecha:</string>
    <string name="MAIN_FORM_GUARDAR">Guardar</string>
    <string name="MAIN_LISTA_NUEVO">Agregar</string>
    <string name="MAIN_LISTA_REGRESAR">Regresar a proyectos</string>
    <string name="MAIN_LISTA_ABRIR">Registros existente:</string>
    <string name="MAIN_LISTA_PROYECTOS">Proyectos existente:</string>
    <string name="MAIN_LOGOUT">Logout</string>
    <string name="LOGIN_FORM_UID">Usuario:</string>
    <string name="LOGIN_FORM_PASSWORD">Password:</string>
    <string name="LOGIN_BTN">Login</string>
    <string name="LOGIN_FORM_BIENVENIDOS">Bienvenidos</string>
    <string name="MAIN_SETTING">Settings</string>
    <string name="MAIN_PROYECTO">Proyectos</string>
    <string name="SETTING_SERVER">Server:</string>
    <string name="SETTING_TITTLE">Setting VASA:</string>
    <string name="SETTING_SINCRONIZAR">Sincronizar</string>
    <string name="RECUBIERTO">Recubierto con:</string>
    <string name="COMPLETO">Completo con:</string>
    <string name="CONDICION">Condicion:</string>
    <string-array name="CONDICION_VALUE">
        <item></item>
        <item>0- Perfecta</item>
        <item>5- Normal</item>
        <item>10- Normal</item>
        <item>15- Normal</item>
        <item>20- Regular</item>
        <item>30- Regular</item>
        <item>40- Regular</item>
        <item>50- Malo</item>
        <item>55- Malo</item>
        <item>60- Malo</item>
        <item>70- Chatarra</item>
    </string-array>
    <string-array name="RECUBIERTO_CON">
        <item></item>
        <item>Aislante termico</item>
        <item>Chaqueta aluminio</item>
        <item>Doble camisa</item>
    </string-array>
    <string name="ACCIONADO_POR_PROMPT">Accionado por</string>
    <string-array name="ACCIONADO_POR">
        <item></item>
        <item>Motor electrico</item>
        <item>Motor reductor</item>
    </string-array>
    <string name="CONSTRUIDO">Construido con:</string>
    <string name="CONSTRUIDO_E">e=</string>
    <string name="CONSTRUIDO_MM">mm</string>
    <string-array name="CONSTRUIDO_CON">
        <item></item>
        <item>Lamina de acero al carbono</item>
        <item>Lamina de acero inoxidable</item>
        <item>Concreto Armado</item>
    </string-array>
    <string name="MONTADO">Montado sobre:</string>
    <string-array name="MONTADO_SOBRE">
        <item></item>
        <item>Base propia</item>
        <item>Estructuras de soporte metalicos apoyadas al piso</item>
        <item>Estructuras de soporte metalicos pernadas al piso</item>
    </string-array>
      <string-array name="EJE_BOMBA">
        <item></item>
        <item>Acero Inoxidable</item>
        <item>Hierro Negro</item>
        <item>Bronce</item>
        <item>Aleacíon de Acero</item>
    </string-array>
    <string name="ERROR_ACTION_NOT_SUPPORTED">Esta acción no esta soportada en el equipo!</string>
     <string-array name="AUTOCOMPLETE_TIPO_BOMBA">
        <item>Centrifuga</item>
        <item>Carcaza Partida</item>
        <item>Tornillo </item>
        <item>Cavidad Progresiva</item>
        <item>Electromagnetica</item>
        <item>Sumergible</item>
        <item>Vacio</item>
        <item>Autocebante</item>
        <item>De Achique</item>
        <item>Diafragma</item>
    </string-array>
    <string-array name="AUTOCOMPLETE_TIPO_COMPRESOR">
        <item>Reciprocante</item>
        <item>Tornillo Helicoidal</item>
        <item>Centrifugo </item>
        <item>Transportable</item>
    </string-array>
    <string-array name="AUTOCOMPLETE_TIPO_TORRE_ENFR">
        <item>Tiro Forzado</item>
        <item>Tiro Inducido</item>
    </string-array>
    <string-array name="AUTOCOMPLETE_TIPO_CALDERA">
        <item>Pirotubular</item>
        <item>Acuotubular</item>
    </string-array>
    <string-array name="AUTOCOMPLETE_TIPO_TANQUE">
        <item>Cilindrico Vertical</item>
        <item>Rectangular</item>
        <item>Cuadrado</item>
        <item>Cilindrico Horizontal</item>
        <item>Esferico</item>
    </string-array>
    <string-array name="AUTOCOMPLETE_TIPO_INTERCAMBIADOR_CALOR">
        <item>Tuberia Doble</item>
        <item>Enfriado Por Aire</item>
        <item>Placas Paralelas</item>
        <item>Casco Y Tubo</item>
    </string-array>
    <string-array name="AUTOCOMPLETE_TIPO_CHILLER">
        <item>Enfriado Por Aire</item>
        <item>Enfriado Por Agua</item>
        <item>Tornillo</item>
        <item>Centrifugo</item>
    </string-array>
    <string-array name="AUTOCOMPLETE_TIPO_TRANSFORMADOR_MONOFASICO">
        <item>Seco</item>
        <item>En Aceite</item>
    </string-array>
    <string-array name="AUTOCOMPLETE_TIPO_TRANSFORMADOR_TRIFASICO">
        <item>Seco</item>
        <item>En Aceite</item>
    </string-array>
    <string-array name="AUTOCOMPLETE_TIPO_LLENADORA">
        <item>Piston</item>
        <item>Carrousel</item>
        <item>Volumetrica</item>
        <item>Gravimetrica</item>
        <item>Manual</item>
    </string-array>
    <string-array name="AUTOCOMPLETE_TIPO_CERRADORA_TAPAS">
        <item>Carrousel</item>
        <item>Automatica</item>
        <item>Manual</item>
    </string-array>
    <string-array name="AUTOCOMPLETE_TIPO_BALANZA">
        <item>Analogica</item>
        <item>Digital</item>
        <item>Analitica</item>
        <item>Semianalitica</item>
        <item>Determinadora De Humedad</item>
        <item>Comparativa</item>
        <item>Mecanica</item>
    </string-array>
    <string-array name="AUTOCOMPLETE_TIPO_TORNO">
        <item>Paralelo Universal</item>
        <item>Revolver</item>
    </string-array>
    <string-array name="AUTOCOMPLETE_TIPO_TRANSPORTADOR">
        <item>Cadena Table Top De Acero Inoxidable</item>
        <item>Cadena Table Top De Plastico</item>
        <item>Rodillos Locos</item>
        <item>Cadena De Arastre</item>
        <item>Banda Plastica</item>
        <item>Banda De Lona</item>
        <item>Banda De Caucho</item>
        <item>Banda Sanitaria</item>
        <item>Malla Metalica</item>
        <item>Tornillo Sinfín</item>
        <item>Bazuka</item>
    </string-array>
    <string-array name="AUTOCOMPLETE_TIPO_AGITADOR">
        <item>Aspas</item>
        <item>Propela</item>
        <item>Paleta</item>
    </string-array>
    <string-array name="AUTOCOMPLETE_TIPO_SIERRA">
        <item>Cinta Vertical</item>
        <item>Cinta Horizontal</item>
        <item>Vaiven</item>
        <item>Circular De Corte Alternativo</item>
    </string-array>
    <string-array name="AUTOCOMPLETE_TIPO_MICROSCOPIO">
        <item>Monocular</item>
        <item>Binocular</item>
        <item>Esteroscopico</item>
        <item>Metalografico</item>
    </string-array>
</resources>